--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <a href="session/session.html">state</a><br>
-    <a href="local_storage/local_storage.html"></a>
+    <a href="local_storage/local_storage.html">local_storage</a>
 </body>
 </html>
