--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
     </style>
 </head>
 <body>
-    <a href="session/session.html">state</a>
-    <a href="local_storage/local_storage.html">local_storage</a>
-    <a href="api/api.html">API call</a>
+    <a href="/session/session.html">state</a>
+    <a href="/local_storage/local_storage.html">local_storage</a>
+    <a href="/api/api.html">API call</a>
 
 </body>
 </html>
