--- a/index.html
+++ b/index.html
@@ -41,7 +41,6 @@
 <body>
     <a href="/session/session.html">state</a>
     <a href="/local_storage/local_storage.html">local_storage</a>
-    <a href="/api/api.html">API call</a>
+    <a href="/api/apiCall.html">API call</a>
 
-</body>
-</html>
+</bo
