--- a/apiCalls/apiCall.html
+++ b/apiCalls/apiCall.html
@@ -12,8 +12,11 @@
         <input type="text" id="taskInput" title="taskInput" />
         <button id="addTask" title="addTask" type="button">Add</button>
       </div>
-      <div id="tasks"></div>
+      <div id="tasks">
+
+
+      </div>
     </section>
-    <script src="/api/apiCallJs.js"></script>
+    <script src="apiCallJs.js"></script>
   </body>
 </html>
