--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
 <body>
     <a href="/session/session.html">state</a>
     <a href="/local_storage/local_storage.html">local_storage</a>
-    <a href="/api/apiCall.html">API call</a>
+    <a href="/apiCalls/apiCall.html">API call</a>
 
-</bo
+</body>
+</html>
