--- a/apiCall2/apiCall2.html
+++ b/apiCall2/apiCall2.html
@@ -8,16 +8,11 @@
   </head>
   <body>
     <section class="tasksContainer">
-      <div class="inputDiv row">
-        <input type="text" id="taskInput" title="taskInput" />
-        <button id="addTask" title="addTask" type="button">Add</button>
-      </div>
-      <div id="tasks">
+      <div id="posts">
 
 
       </div>
     </section>
-    
-    <script src="apiCallJs.js"></script>
+    <script src="/apiCall2/apiCallJs2.js"></script>
   </body>
 </html>
